--- a/_config.yml
+++ b/_config.yml
@@ -41,4 +41,5 @@ social:
     - https://github.com/wangjie-ruc 
     - https://weibo.com/u/3621391992
 # google_site_verification: u4WXQl0Eu66rsQo2kRdCNx
+google-site-verification: zOzd0jR8A6rAPFKgLagOHKiUYO8EhpuP7OUsRxrfckk
 lang: en
