--- a/_data/social.yml
+++ b/_data/social.yml
@@ -21,3 +21,7 @@
 - title: iPhone
   url: tel:17810351206
   icon: fas fa-mobile
+
+- title: yuque
+  url: https://www.yuque.com/wangjie-ruc
+  icon: fab yuque
